--- a/style.scss
+++ b/style.scss
@@ -127,10 +127,10 @@ a:hover
 {
   position: absolute;
   width: 300px;
-  margin: -100px 0 0 0;
+  margin: -1000px 0 0  0;
   padding: 50px;
-  padding-top: 125px;
-  right: -100px;
+  padding-top: -125px;
+  right: 0;
 
   background: #ededed;
   list-style-type: none;
