--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ body {
 body, input, textarea, select {
   font-family: 'Open Sans', sans-serif;
   line-height: 1.85em;
-  color: #888;
+  color: #363636;
   font-weight: 300;
   font-size: 13pt; }
 
@@ -139,7 +139,7 @@ hr {
   border: 0;
   border-top: solid 1px #444;
   border-top-color: rgba(0, 0, 0, 0.35);
-  box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.1);
+  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
   height: 1px;
   margin: 3em 0; }
 
@@ -834,14 +834,13 @@ form textarea {
   transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
   -webkit-appearance: none;
   display: block;
-  border: 0;
   padding: 0.75em;
   font-size: 1em;
   border-radius: 8px;
   border: solid 1px #ddd;
   background: #fff;
   color: #bbb;
-  box-shadow: inset 0px 2px 3px 1px rgba(0, 0, 0, 0.05), 0px 1px 0px 0px rgba(255, 255, 255, 0.025);
+  box-shadow: inset 0 2px 3px 1px rgba(0, 0, 0, 0.05), 0 1px 0 0 rgba(255, 255, 255, 0.025);
   width: 100%; }
   form input[type=text]:focus,
   form input[type=email]:focus,
@@ -849,7 +848,7 @@ form textarea {
   form select:focus,
   form textarea:focus {
     background: #fafafa;
-    box-shadow: inset 0px 2px 5px 0px rgba(0, 0, 0, 0.05), 0px 1px 0px 0px rgba(255, 255, 255, 0.025), inset 0px 0px 2px 1px #43bff0; }
+    box-shadow: inset 0 2px 5px 0 rgba(0, 0, 0, 0.05), 0 1px 0 0 rgba(255, 255, 255, 0.025), inset 0 0 2px 1px #43bff0; }
 form textarea {
   height: 15em; }
 form .actions:last-child {
@@ -925,27 +924,25 @@ input[type="submit"],
 input[type="reset"],
 button,
 .button {
-  background-image: url("images/bg.png"), -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-  background-image: url("images/bg.png"), -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-  background-image: url("images/bg.png"), -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-  background-image: url("images/bg.png"), linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-  -moz-transition: background-color .2s ease-in-out;
-  -webkit-transition: background-color .2s ease-in-out;
-  -ms-transition: background-color .2s ease-in-out;
-  transition: background-color .2s ease-in-out;
+  background-image: -moz-linear-gradient(top, #f55e2c, #850503);
+  background-image: -webkit-linear-gradient(top, #f55e2c, #850503);
+  background-image: -ms-linear-gradient(top, #f55e2c, #850503);
+  background-image: linear-gradient(top, #f55e2c, #850503);
+  -moz-transition: background-color 5s ease-in-out;
+  -webkit-transition: background-color 5s ease-in-out;
+  -ms-transition: background-color 5s ease-in-out;
+  transition: background-color 5s ease-in-out;
   -webkit-appearance: none;
   position: relative;
   display: inline-block;
-  color: #fff !important;
+  color: #000000 !important;
   text-decoration: none;
   font-weight: 700;
   border: 0;
   outline: 0;
   cursor: pointer;
   border-radius: 8px;
-  text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
   overflow: hidden;
-  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.75);
   background-color: #43B3E0;
   padding: 1em 2.35em 1em 2.35em;
   font-size: 1.1em;
@@ -955,7 +952,10 @@ button,
   input[type="reset"]:hover,
   button:hover,
   .button:hover {
-    background-color: #43bff0;
+    background-image: -moz-linear-gradient(top, #490a29, #171311);
+    background-image: -webkit-linear-gradient(top, #490a29, #171311);
+    background-image: -ms-linear-gradient(top, #490a29, #171311);
+    background-image: linear-gradient(top, #490a29, #171311);
     color: #fff !important; }
   input[type="button"]:active,
   input[type="submit"]:active,
@@ -970,14 +970,15 @@ button,
   button.large,
   .button.large {
     font-size: 1.5em;
-    letter-spacing: -0.025em; }
+    letter-spacing: -0.025em;
+    margin-right: 1em; }
   input[type="button"].alt,
   input[type="submit"].alt,
   input[type="reset"].alt,
   button.alt,
   .button.alt {
     background-color: #444;
-    box-shadow: inset 0px 0px 0px 1px #242424, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.2); }
+    box-shadow: inset 0 0 0 1px #242424, inset 0 2px 1px 0 rgba(255, 255, 255, 0.2); }
     input[type="button"].alt:hover,
     input[type="submit"].alt:hover,
     input[type="reset"].alt:hover,
@@ -1019,7 +1020,7 @@ ul.actions {
 /* Box */
 .box {
   background: #fff;
-  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.15), 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 2em; }
   .box.style1 {
@@ -1068,39 +1069,40 @@ ul.actions {
 
 /* Wrappers */
 .wrapper {
-  box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.05), inset 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 2px 3px 0 rgba(0, 0, 0, 0.1);
   padding: 8em 0 8em 0;
   text-align: center; }
   .wrapper.style1 {
     background-image: none;
     background-color: #fff; }
   .wrapper.style2 {
-    background-color: #fafafa;
-    text-shadow: 1px 1px 0px #fff; }
+    background-color: #fafafa; }
   .wrapper.style3 {
-    background-color: #f4f4f4;
-    text-shadow: 1px 1px 0px #fff; }
+    background-color: #f4f4f4; }
   .wrapper.style4 {
-    background-color: #303030;
-    color: #999;
-    text-shadow: -1px -1px 0px #181818; }
+    background-color: #171311;
+    color: #dcdcdc; }
     .wrapper.style4 h1, .wrapper.style4 h2, .wrapper.style4 h3, .wrapper.style4 h4, .wrapper.style4 h5, .wrapper.style4 h6 {
       color: #fff; }
     .wrapper.style4 form input[type=text],
     .wrapper.style4 form input[type=password],
     .wrapper.style4 form select,
     .wrapper.style4 form textarea {
+      color: #ffffff;
       border: none;
-      background: #282828; }
+      background: #504a48; }
       .wrapper.style4 form input[type=text]:focus,
       .wrapper.style4 form input[type=password]:focus,
       .wrapper.style4 form select:focus,
       .wrapper.style4 form textarea:focus {
-        background: #252525; }
+        background: #756b68;
+        border: none; }
+    .wrapper.style4 input::placeholder {
+      color: #ffffff; }
 
 /* Nav */
 #nav {
-  background-color: #282828;
+  background-color: #171311;
   text-align: center;
   position: fixed;
   left: 0;
@@ -1129,13 +1131,12 @@ ul.actions {
     outline: 0;
     font-weight: 600;
     border-radius: 8px;
-    color: #fff;
     height: 2.5em;
     line-height: 2.5em;
     padding: 0 1.25em; }
     #nav a:hover {
       color: #fff !important;
-      background: #383838; }
+      background: #f55e2c; }
     #nav a.active {
       background: #484848; }
       #nav a.active:before {
