--- a/css/main.css
+++ b/css/main.css
@@ -1020,7 +1020,6 @@ ul.actions {
 /* Box */
 .box {
   background: #fff;
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 2em; }
   .box.style1 {
@@ -1069,7 +1068,6 @@ ul.actions {
 
 /* Wrappers */
 .wrapper {
-  box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 2px 3px 0 rgba(0, 0, 0, 0.1);
   padding: 8em 0 8em 0;
   text-align: center; }
   .wrapper.style1 {
@@ -1376,5 +1374,70 @@ body > article {
       border-left: 0; }
       #copyright li:first-child {
         margin-top: 0; } }
+/* Box */
+.pic {
+  margin-bottom: 6em;
+  padding: 3.5em; }
+  .pic.alt {
+    background: none;
+    border: none;
+    padding: 0; }
+
+/* Feature */
+.card {
+  position: relative;
+  height: 20em; }
+  .card:after {
+    clear: both;
+    content: '';
+    display: block; }
+  .card h3, .card h4, .card h5, .card h6 {
+    text-align: inherit; }
+  .card .image {
+    display: inline-block;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    width: 50%; }
+    .card .image img {
+      display: block;
+      min-height: 100%;
+      min-width: 100%;
+      position: absolute; }
+  .card:before {
+    background: blue;
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle; }
+  .card .pic-card {
+    display: inline-block;
+    padding: 3.5em;
+    vertical-align: middle;
+    width: 48%; }
+    .card .pic-card h3 {
+      margin-bottom: 0.5em; }
+    .card .pic-card :last-child {
+      margin: 0; }
+  .card.left {
+    text-align: left; }
+    .card.left .image {
+      float: left; }
+      .card.left .image img {
+        right: 0;
+        top: 0; }
+    .card.left .pic-card {
+      padding-right: 0; }
+  .card.right {
+    text-align: right; }
+    .card.right .image {
+      float: right; }
+      .card.right .image img {
+        left: 0;
+        top: 0; }
+    .card.right .pic-card {
+      padding-left: 0; }
+  .card.long .pic-card {
+    padding-top: 0; }
 
 /*# sourceMappingURL=main.css.map */
