--- a/css/main.scss
+++ b/css/main.scss
@@ -536,7 +536,6 @@ ul.actions {
 
 .box {
   background: #fff;
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 2em;
 
@@ -604,7 +603,6 @@ ul.actions {
 /* Wrappers */
 
 .wrapper {
-  box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 2px 3px 0 rgba(0, 0, 0, 0.1);
   padding: 8em 0 8em 0;
   text-align: center;
 
@@ -644,6 +642,7 @@ ul.actions {
         }
       }
     }
+
     input::placeholder {
       color: #ffffff;
     }
@@ -1055,4 +1054,113 @@ body > article {
     }
   }
 
+}
+
+
+/* Box */
+
+.pic {
+  margin-bottom: 6em;
+  padding: 3.5em;
+
+  &.alt {
+    background: none;
+    border: none;
+    padding: 0;
+  }
+}
+
+/* Feature */
+
+.card {
+  position: relative;
+  height: 20em;
+
+  &:after {
+    clear: both;
+    content: '';
+    display: block;
+  }
+
+  h3, h4, h5, h6 {
+    text-align: inherit;
+  }
+
+  .image {
+    display: inline-block;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    width: 50%;
+
+    img {
+      display: block;
+      min-height: 100%;
+      min-width: 100%;
+      position: absolute;
+    }
+  }
+
+  &:before {
+    background: blue;
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+  }
+
+  .pic-card {
+    display: inline-block;
+    padding: 3.5em;
+    vertical-align: middle;
+    width: 48%;
+
+    h3 {
+      margin-bottom: 0.5em;
+    }
+
+    :last-child {
+      margin: 0;
+    }
+  }
+
+  &.left {
+    text-align: left;
+
+    .image {
+      float: left;
+
+      img {
+        right: 0;
+        top: 0;
+      }
+    }
+
+    .pic-card {
+      padding-right: 0;
+    }
+  }
+
+  &.right {
+    text-align: right;
+
+    .image {
+      float: right;
+
+      img {
+        left: 0;
+        top: 0;
+      }
+    }
+
+    .pic-card {
+      padding-left: 0;
+    }
+  }
+
+  &.long {
+    .pic-card {
+      padding-top: 0;
+    }
+  }
 }
