--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,700");
-@import url("fontawesome-all.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Mulish&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -63,7 +62,7 @@ body {
     transition: none !important; }
 
 body, input, textarea, select {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Mulish', sans-serif;
   line-height: 1.85em;
   color: #363636;
   font-weight: 300;
@@ -826,6 +825,7 @@ form label {
 form input[type=text],
 form input[type=email],
 form input[type=password],
+form input[type=tel],
 form select,
 form textarea {
   -moz-transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
@@ -845,6 +845,7 @@ form textarea {
   form input[type=text]:focus,
   form input[type=email]:focus,
   form input[type=password]:focus,
+  form input[type=tel]:focus,
   form select:focus,
   form textarea:focus {
     background: #fafafa;
@@ -1053,8 +1054,6 @@ ul.actions {
     display: none; }
   .icon.solid:before {
     font-weight: 900; }
-  .icon.brands:before {
-    font-family: 'Font Awesome 5 Brands'; }
   .icon.featured {
     color: #EA8A95;
     display: block;
@@ -1081,6 +1080,7 @@ ul.actions {
       color: #fff; }
     .wrapper.style4 form input[type=text],
     .wrapper.style4 form input[type=password],
+    .wrapper.style4 form input[type=tel],
     .wrapper.style4 form select,
     .wrapper.style4 form textarea {
       color: #ffffff;
@@ -1088,6 +1088,7 @@ ul.actions {
       background: #504a48; }
       .wrapper.style4 form input[type=text]:focus,
       .wrapper.style4 form input[type=password]:focus,
+      .wrapper.style4 form input[type=tel]:focus,
       .wrapper.style4 form select:focus,
       .wrapper.style4 form textarea:focus {
         background: #756b68;
@@ -1439,19 +1440,85 @@ body > article {
 
 /* header li */
 .pluses ul {
-  list-style-image: url("../images/checkbox.svg"); }
+  list-style-image: url("../images/check.svg"); }
 .pluses li {
   position: relative;
   list-style: none;
-  padding-left: 40px; }
+  padding-left: 40px;
+  margin-bottom: 5px;
+  text-align: left; }
 .pluses li::before {
   position: absolute;
   content: '';
   left: 0;
   top: 0;
-  width: 20px;
-  height: 20px;
-  background-img: url("../images/checkbox.svg");
+  width: 30px;
+  height: 30px;
+  background-image: url("../images/check.svg");
   background-size: cover; }
+
+#header-h1 {
+  line-height: 1em; }
+
+input[type=checkbox] {
+  -moz-appearance: checkbox;
+  -webkit-appearance: checkbox;
+  -ms-appearance: checkbox;
+  appearance: checkbox; }
+
+.custom-checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  margin: auto;
+  justify-content: start;
+  color: #ffffff !important; }
+
+.custom-checkbox + label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+  cursor: pointer; }
+
+.custom-checkbox + label::before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid #ffffff;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%; }
+
+.custom-checkbox:not(:disabled):not(:checked) + label:hover::before {
+  border-color: #ff8962; }
+
+.custom-checkbox:not(:disabled):active + label::before {
+  background-color: #ff8962;
+  border-color: #d57150; }
+
+.custom-checkbox:focus + label::before {
+  box-shadow: 0 0 0 0.2rem rgba(245, 94, 44, 0.4); }
+
+.custom-checkbox:focus:not(:checked) + label::before {
+  border-color: #f55e2c; }
+
+.custom-checkbox:checked + label::before {
+  border-color: #f55e2c;
+  background-color: #f55e2c;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e"); }
+
+.custom-checkbox:disabled + label::before {
+  background-color: #e9ecef; }
+
+.checkbox {
+  width: 33%;
+  margin: auto;
+  float: left;
+  color: #ffffff !important; }
 
 /*# sourceMappingURL=main.css.map */
