--- a/css/main.css
+++ b/css/main.css
@@ -818,7 +818,7 @@ footer {
 
 /* Form */
 form label {
-  color: #3e3e3e;
+  color: #9b9b9b;
   font-weight: 700;
   display: block;
   margin: 0 0 0.5em 0; }
@@ -841,7 +841,8 @@ form textarea {
   background: #fff;
   color: #bbb;
   box-shadow: inset 0 2px 3px 1px rgba(0, 0, 0, 0.05), 0 1px 0 0 rgba(255, 255, 255, 0.025);
-  width: 100%; }
+  width: 100%;
+  resize: none; }
   form input[type=text]:focus,
   form input[type=email]:focus,
   form input[type=password]:focus,
@@ -855,13 +856,13 @@ form textarea {
 form .actions:last-child {
   margin-bottom: 0; }
 form ::-webkit-input-placeholder {
-  color: #555 !important; }
+  color: #989898 !important; }
 form :-moz-placeholder {
-  color: #555 !important; }
+  color: #989898 !important; }
 form ::-moz-placeholder {
-  color: #555 !important; }
+  color: #989898 !important; }
 form :-ms-input-placeholder {
-  color: #555 !important; }
+  color: #989898 !important; }
 form ::-moz-focus-inner {
   border: 0; }
 
