--- a/css/main.scss
+++ b/css/main.scss
@@ -1263,3 +1263,20 @@ input[type=checkbox] {
   float: left;
   color: #ffffff !important;
 }
+
+.left-label {
+  margin-top: 1em;
+  text-align: left;
+}
+
+
+#last {
+  margin-top: 5em;
+  margin-bottom: 5em;
+
+
+  .button {
+    margin: auto;
+    width: 400px;
+  }
+}
