--- a/css/main.css
+++ b/css/main.css
@@ -1535,37 +1535,38 @@ input[type=checkbox] {
 
 #contact {
   padding: 0; }
-  #contact .footer-contacts {
+
+.footer-contacts {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0.8em;
+  text-align: left; }
+  .footer-contacts h2 {
+    display: block;
+    font-weight: lighter;
+    margin-bottom: 2em; }
+  .footer-contacts p {
+    margin-bottom: 0.8em; }
+  .footer-contacts .footer-left {
+    width: 35%;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 0.8em;
-    text-align: left; }
-    #contact .footer-contacts h2 {
-      display: block;
-      font-weight: lighter;
-      margin-bottom: 2em; }
-    #contact .footer-contacts p {
-      margin-bottom: 0.8em; }
-    #contact .footer-contacts .footer-left {
-      width: 35%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between; }
-      #contact .footer-contacts .footer-left button {
-        border: none;
-        border-radius: 4px;
-        margin-top: 20px;
-        cursor: pointer;
-        width: calc(100% - 1em);
-        align-items: center;
-        margin-left: 0.5em;
-        font-size: 1em; }
-    #contact .footer-contacts .footer-right {
-      width: 55%;
-      justify-content: flex-end; }
-    #contact .footer-contacts .table-contact {
-      padding-right: 0.5em;
-      width: 5em; }
+    flex-direction: column;
+    justify-content: space-between; }
+    .footer-contacts .footer-left button {
+      border: none;
+      border-radius: 4px;
+      margin-top: 20px;
+      cursor: pointer;
+      width: calc(100% - 1em);
+      align-items: center;
+      margin-left: 0.5em;
+      font-size: 1em; }
+  .footer-contacts .footer-right {
+    width: 55%;
+    justify-content: flex-end; }
+  .footer-contacts .table-contact {
+    padding-right: 0.5em;
+    width: 5em; }
 
 /*# sourceMappingURL=main.css.map */
