--- a/css/main.scss
+++ b/css/main.scss
@@ -22,15 +22,12 @@
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
-}
-
-body {
-  line-height: 1;
 }
 
 ol, ul {
@@ -53,6 +50,9 @@ table {
 
 body {
   -webkit-text-size-adjust: none;
+  background-color: #6e6ef8;
+  line-height: 1;
+
 }
 
 mark {
@@ -104,6 +104,10 @@ body, input, textarea, select {
   font-weight: 300;
   font-size: 13pt;
 
+}
+
+main {
+  box-sizing: border-box;
 }
 
 a {
@@ -473,7 +477,6 @@ button,
   &.large {
     font-size: 1.5em;
     letter-spacing: -0.025em;
-    margin-right: 1em;
   }
 
   &.alt {
@@ -650,7 +653,7 @@ ul.actions {
   position: fixed;
   left: 0;
   top: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 10000;
   cursor: default;
   height: 3.5em;
@@ -1272,7 +1275,6 @@ input[type=checkbox] {
 
 .button {
   margin: auto;
-  width: 400px;
 }
 
 
