--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,6 @@ header {
     margin: 0; }
 
 footer {
-  margin: 3em 0 0 0;
   background-color: #171311; }
   footer > p {
     font-size: 1.25em; }
@@ -853,7 +852,7 @@ form textarea {
   form select:focus,
   form textarea:focus {
     background: #fafafa;
-    box-shadow: inset 0 2px 5px 0 rgba(0, 0, 0, 0.05), 0 1px 0 0 rgba(255, 255, 255, 0.025), inset 0 0 2px 1px #43bff0; }
+    box-shadow: inset 0 2px 5px 0 rgba(0, 0, 0, 0.05), 0 1px 0 0 rgba(255, 255, 255, 0.025), inset 0 0 2px 1px #f55e2c; }
 form textarea {
   height: 15em; }
 form .actions:last-child {
@@ -945,7 +944,7 @@ button,
   cursor: pointer;
   border-radius: 8px;
   overflow: hidden;
-  background-color: #43B3E0;
+  background-color: #f55e2c;
   padding: 1em 2.35em 1em 2.35em;
   font-size: 1.1em;
   max-width: 24em; }
@@ -964,7 +963,7 @@ button,
   input[type="reset"]:active,
   button:active,
   .button:active {
-    background-color: #3BA8D3;
+    background-color: #f55e2c;
     top: 1px; }
   input[type="button"].large,
   input[type="submit"].large,
@@ -1058,7 +1057,7 @@ ul.actions {
   .icon.solid:before {
     font-weight: 900; }
   .icon.featured {
-    color: #EA8A95;
+    color: #f55e2c;
     display: block;
     margin: 0 0 1.5em 0;
     cursor: default; }
@@ -1262,10 +1261,8 @@ body > article {
     header > p {
       font-size: 1.25em; }
 
-  footer {
-    margin: 2.5em 0 0 0; }
-    footer > p {
-      font-size: 1.25em; }
+  footer > p {
+    font-size: 1.25em; }
 
   hr {
     margin: 1.5em 0 2em 0; }
@@ -1376,16 +1373,15 @@ body > article {
       border-left: 0; }
       #copyright li:first-child {
         margin-top: 0; } }
+/* Block 10 */
 /* Box */
 .pic {
-  margin-bottom: 6em;
   padding: 3.5em; }
   .pic.alt {
     background: none;
     border: none;
     padding: 0; }
 
-/* Block 10 */
 .card {
   position: relative;
   height: 20em; }
@@ -1407,7 +1403,7 @@ body > article {
       min-width: 100%;
       position: absolute; }
   .card:before {
-    background: blue;
+    background: #f55e2c;
     content: '';
     display: inline-block;
     height: 100%;
@@ -1547,7 +1543,7 @@ input[type=checkbox] {
     font-weight: lighter;
     margin-bottom: 2em; }
   .footer-contacts p {
-    margin-bottom: 0.8em; }
+    margin-bottom: 0.2em; }
   .footer-contacts .footer-left {
     width: 35%;
     display: flex;
