--- a/css/main.css
+++ b/css/main.css
@@ -1549,7 +1549,7 @@ input[type=checkbox] {
     display: flex;
     flex-direction: column;
     justify-content: space-between; }
-    .footer-contacts .footer-left button {
+    .footer-contacts .footer-left .button {
       border: none;
       border-radius: 4px;
       margin-top: 20px;
@@ -1557,12 +1557,31 @@ input[type=checkbox] {
       width: calc(100% - 1em);
       align-items: center;
       margin-left: 0.5em;
-      font-size: 1em; }
+      font-size: 1em;
+      text-align: center; }
   .footer-contacts .footer-right {
     width: 55%;
     justify-content: flex-end; }
   .footer-contacts .table-contact {
     padding-right: 0.5em;
     width: 5em; }
+
+.social-icons {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px; }
+  .social-icons img {
+    width: 48px; }
+  .social-icons .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1.3em;
+    margin-bottom: 1em;
+    transition: background-color 0.2s ease; }
+  .social-icons .icon:hover {
+    filter: drop-shadow(0 0 3px #f55e2c); }
 
 /*# sourceMappingURL=main.css.map */
