--- a/css/main.scss
+++ b/css/main.scss
@@ -1300,7 +1300,7 @@ input[type=checkbox] {
     flex-direction: column;
     justify-content: space-between;
 
-    button {
+    .button {
       border: none;
       border-radius: 4px;
       margin-top: 20px;
@@ -1309,6 +1309,7 @@ input[type=checkbox] {
       align-items: center;
       margin-left: 0.5em;
       font-size: 1em;
+      text-align: center;
     }
   }
 
@@ -1320,5 +1321,31 @@ input[type=checkbox] {
   .table-contact {
     padding-right: 0.5em;
     width: 5em;
+  }
+}
+
+
+.social-icons {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+
+img {
+  width: 48px;
+}
+
+  .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1.3em;
+    margin-bottom: 1em;
+    transition: background-color 0.2s ease;
+  }
+
+  .icon:hover {
+    filter: drop-shadow(0 0 3px #f55e2c);
   }
 }
