--- a/css/main.scss
+++ b/css/main.scss
@@ -152,7 +152,7 @@ blockquote {
 
 h1, h2, h3, h4, h5, h6 {
   color: #3e3e3e;
-  margin: 0 0 0.75em 0;
+  margin: 0 0 2em 0;
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -206,8 +206,6 @@ p, ul, ol, dl, table {
 }
 
 header {
-  margin: 0 0 3em 0;
-
   > p {
     font-size: 1.25em;
     margin: 0;
@@ -596,7 +594,7 @@ ul.actions {
 /* Wrappers */
 
 .wrapper {
-  padding: 8em 0 8em 0;
+  padding: 3em 0 3em 0;
   text-align: center;
 
   &.style1 {
@@ -712,7 +710,7 @@ body > article {
 }
 
 #top {
-  padding: 10em 0 10em 0;
+  padding: 3em 0;
   text-align: left;
 
   .image {
@@ -796,14 +794,10 @@ body > article {
     font-size: 11pt;
   }
 
-  header {
-    margin: 0 0 4em 0;
-  }
-
   /* Wrappers */
 
   .wrapper {
-    padding: 5em 0 5em 0;
+    padding: 3em 0 3em 0;
     text-align: center;
 
     &.style4 {
@@ -817,7 +811,7 @@ body > article {
   /* Articles */
 
   #top {
-    padding: 8em 0;
+    padding: 3em 0;
 
     .image {
       width: 24em;
@@ -863,7 +857,7 @@ body > article {
 
   h1, h2, h3, h4, h5, h6 {
     font-size: 1.25em;
-    margin: 0 0 0.4em 0;
+    margin: 0 0 2em 0;
   }
 
   h1 {
@@ -872,8 +866,6 @@ body > article {
   }
 
   header {
-    margin: 0 0 2em 0;
-
     > p {
       font-size: 1.25em;
     }
@@ -981,6 +973,7 @@ body > article {
       margin-left: auto !important;
       margin-right: auto !important;
     }
+
   }
 
   /* Wrappers */
@@ -1188,7 +1181,6 @@ body > article {
   line-height: 1em;
 }
 
-
 input[type=checkbox] {
   -moz-appearance: checkbox;
   -webkit-appearance: checkbox;
@@ -1348,4 +1340,9 @@ img {
   .icon:hover {
     filter: drop-shadow(0 0 3px #f55e2c);
   }
+}
+
+
+.horn {
+  width: 5em;
 }
