--- a/css/main.css
+++ b/css/main.css
@@ -50,15 +50,6 @@ html {
 
 body {
   padding-top: 3.5em; }
-  body.is-preload *, body.is-preload *:before, body.is-preload *:after {
-    -moz-animation: none !important;
-    -webkit-animation: none !important;
-    -ms-animation: none !important;
-    animation: none !important;
-    -moz-transition: none !important;
-    -webkit-transition: none !important;
-    -ms-transition: none !important;
-    transition: none !important; }
 
 body, input, textarea, select {
   font-family: 'Mulish', sans-serif;
@@ -71,10 +62,6 @@ main {
   box-sizing: border-box; }
 
 a {
-  -moz-transition: color .2s ease-in-out;
-  -webkit-transition: color .2s ease-in-out;
-  -ms-transition: color .2s ease-in-out;
-  transition: color .2s ease-in-out;
   color: #f55e2c;
   text-decoration: underline; }
   a:hover {
@@ -104,7 +91,11 @@ blockquote {
   padding: 1em 0 1em 1.5em;
   font-style: italic; }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
+  color: #3e3e3e;
+  margin: 0 0 0.75em 0; }
+
+h2, h3, h4, h5, h6 {
   color: #3e3e3e;
   margin: 0 0 2em 0; }
 
@@ -145,7 +136,7 @@ hr {
   margin: 3em 0; }
 
 p, ul, ol, dl, table {
-  margin-bottom: 2em; }
+  margin-bottom: 1em; }
 
 header > p {
   font-size: 1.25em;
@@ -828,10 +819,6 @@ form input[type=password],
 form input[type=tel],
 form select,
 form textarea {
-  -moz-transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
-  -webkit-transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
-  -ms-transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
-  transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
   -webkit-appearance: none;
   display: block;
   padding: 0.75em;
@@ -927,10 +914,6 @@ button,
   background-image: -webkit-linear-gradient(top, #f55e2c, #850503);
   background-image: -ms-linear-gradient(top, #f55e2c, #850503);
   background-image: linear-gradient(top, #f55e2c, #850503);
-  -moz-transition: background-color 5s ease-in-out;
-  -webkit-transition: background-color 5s ease-in-out;
-  -ms-transition: background-color 5s ease-in-out;
-  transition: background-color 5s ease-in-out;
   -webkit-appearance: none;
   position: relative;
   display: inline-block;
@@ -1116,10 +1099,6 @@ ul.actions {
     display: inline-block;
     padding-left: 0; }
   #nav a {
-    -moz-transition: background-color .2s ease-in-out;
-    -webkit-transition: background-color .2s ease-in-out;
-    -ms-transition: background-color .2s ease-in-out;
-    transition: background-color .2s ease-in-out;
     position: relative;
     display: block;
     color: #fff;
@@ -1157,7 +1136,8 @@ body > article {
     border-radius: 100%;
     width: 20em;
     height: 20em;
-    margin: 0; }
+    margin: 0;
+    margin-top: 4em; }
     #top .image img {
       border-radius: 100%; }
   #top h1 {
@@ -1192,10 +1172,6 @@ body > article {
       padding-left: 0;
       margin-left: 0; }
   #copyright a {
-    -moz-transition: color .2s ease-in-out;
-    -webkit-transition: color .2s ease-in-out;
-    -ms-transition: color .2s ease-in-out;
-    transition: color .2s ease-in-out;
     color: inherit; }
     #copyright a:hover {
       color: #777; }
@@ -1223,7 +1199,8 @@ body > article {
     #top .image {
       width: 24em;
       height: 24em;
-      margin: 0; } }
+      margin: 0;
+      margin-top: 3em; } }
 /* Medium */
 @media screen and (max-width: 980px) {
   /* Articles */
@@ -1231,7 +1208,18 @@ body > article {
     text-align: center;
     padding: 5em 0; }
     #top .image {
-      margin: 0 auto 2em auto; } }
+      margin: 0 auto 2em auto; }
+
+  #header-li {
+    text-align: center; }
+    #header-li ul {
+      display: inline-block;
+      text-align: left; }
+
+  .button {
+    padding: 1em 3em;
+    font-size: 1.1em;
+    max-width: 28em; } }
 /* Small */
 @media screen and (max-width: 736px) {
   /* Basic */
@@ -1291,15 +1279,6 @@ body > article {
         top: 0 !important; }
         ul.social li a:before {
           background-color: transparent !important; }
-
-  /* Actions */
-  ul.actions {
-    margin: 0; }
-    ul.actions li {
-      display: block;
-      margin: 15px 0 0 0; }
-      ul.actions li:first-child {
-        margin-top: 0; }
 
   /* Box */
   .box {
@@ -1365,7 +1344,13 @@ body > article {
       box-shadow: none;
       border-left: 0; }
       #copyright li:first-child {
-        margin-top: 0; } }
+        margin-top: 0; }
+
+  #header-li {
+    text-align: center; }
+    #header-li ul {
+      display: inline-block;
+      text-align: left; } }
 /* Block 10 */
 /* Box */
 .pic {
@@ -1558,6 +1543,8 @@ input[type=checkbox] {
   .footer-contacts .table-contact {
     padding-right: 0.5em;
     width: 5em; }
+  .footer-contacts table {
+    font-size: 1rem; }
 
 .social-icons {
   display: flex;
@@ -1572,8 +1559,7 @@ input[type=checkbox] {
     justify-content: center;
     align-items: center;
     margin-right: 1.3em;
-    margin-bottom: 1em;
-    transition: background-color 0.2s ease; }
+    margin-bottom: 1em; }
   .social-icons .icon:hover {
     filter: drop-shadow(0 0 3px #f55e2c); }
 
