--- a/css/main.scss
+++ b/css/main.scss
@@ -215,6 +215,57 @@ footer {
   }
 }
 
+#promotion-row {
+  margin: 0 auto;
+  padding: 25px 0 0 25px;
+  width: 1200px;
+
+  &.medium {
+    width: (1200px * 1);
+  }
+
+  @include breakpoint('<=xlarge') {
+    width: 1225px;
+
+    &.medium {
+      width: (1225px * 0.75);
+    }
+  }
+
+  @include breakpoint('<=large') {
+    width: 960px;
+
+    &.medium {
+      width: (960px * 1);
+    }
+  }
+
+  @include breakpoint('<=medium') {
+    width: 100%;
+
+    &.medium {
+      width: (100% * 0.85);
+    }
+  }
+
+  @include breakpoint('<=small') {
+    padding: 0;
+    width: 100%;
+    max-width: calc(100% - 20px);
+
+    &.medium {
+      width: 100%;
+    }
+  }
+
+  #promotion-box {
+     width: 100%;
+    max-width: 100%;
+   }
+}
+
+
+
 /* Container */
 
 .container {
@@ -771,6 +822,14 @@ body > article {
   }
 }
 
+@include breakpoint('<=xlarge') {
+
+  #promotion-box {
+    width: calc(85vw - 25px);
+  }
+
+}
+
 
 
 /* Large */
@@ -967,6 +1026,9 @@ body > article {
       margin-right: auto !important;
     }
   }
+
+
+
 
   /* Wrappers */
 
