--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ body {
 body, input, textarea, select {
   font-family: 'Mulish', sans-serif;
   line-height: 1.85em;
-  color: #363636;
+  color: #fff;
   font-weight: 300;
   font-size: 13pt; }
 
@@ -62,16 +62,13 @@ main {
   box-sizing: border-box; }
 
 a {
-  color: #f55e2c;
   text-decoration: underline; }
-  a:hover {
-    color: #bb3000 !important; }
   a img {
     border: 0; }
 
 b, strong {
   font-weight: 600;
-  color: #3e3e3e; }
+  color: #fff; }
 
 i, em {
   font-style: italic; }
@@ -92,11 +89,11 @@ blockquote {
   font-style: italic; }
 
 h1 {
-  color: #3e3e3e;
+  color: #fff;
   margin: 0 0 0.75em 0; }
 
 h2, h3, h4, h5, h6 {
-  color: #3e3e3e;
+  color: #fff;
   margin: 0 0 2em 0; }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -963,14 +960,10 @@ input[type="submit"],
 input[type="reset"],
 button,
 .button {
-  background-image: -moz-linear-gradient(top, #f55e2c, #850503);
-  background-image: -webkit-linear-gradient(top, #f55e2c, #850503);
-  background-image: -ms-linear-gradient(top, #f55e2c, #850503);
-  background-image: linear-gradient(top, #f55e2c, #850503);
+  background-color: #f55e2c;
   -webkit-appearance: none;
   position: relative;
   display: inline-block;
-  color: #000000 !important;
   text-decoration: none;
   font-weight: 700;
   border: 0;
@@ -987,11 +980,7 @@ button,
   input[type="reset"]:hover,
   button:hover,
   .button:hover {
-    background-image: -moz-linear-gradient(top, #490a29, #171311);
-    background-image: -webkit-linear-gradient(top, #490a29, #171311);
-    background-image: -ms-linear-gradient(top, #490a29, #171311);
-    background-image: linear-gradient(top, #490a29, #171311);
-    color: #fff !important; }
+    background-color: #f56b41; }
   input[type="button"]:active,
   input[type="submit"]:active,
   input[type="reset"]:active,
