--- a/css/main.scss
+++ b/css/main.scss
@@ -90,7 +90,7 @@ body {
 body, input, textarea, select {
   font-family: 'Mulish', sans-serif;
   line-height: 1.85em;
-  color: #363636;
+  color: #fff;
   font-weight: 300;
   font-size: 13pt;
 
@@ -101,12 +101,7 @@ main {
 }
 
 a {
-  color: #f55e2c;
   text-decoration: underline;
-
-  &:hover {
-    color: #bb3000 !important;
-  }
 
   img {
     border: 0;
@@ -115,7 +110,7 @@ a {
 
 b, strong {
   font-weight: 600;
-  color: #3e3e3e;
+  color: #fff;
 }
 
 i, em {
@@ -141,12 +136,12 @@ blockquote {
 }
 
 h1 {
-  color: #3e3e3e;
+  color: #fff;
   margin: 0 0 0.75em 0;
 }
 
 h2, h3, h4, h5, h6 {
-  color: #3e3e3e;
+  color: #fff;
   margin: 0 0 2em 0;
 }
 
@@ -519,11 +514,10 @@ input[type="submit"],
 input[type="reset"],
 button,
 .button {
-  @include vendor('background-image', ('linear-gradient(top, #f55e2c, #850503)'));
+  background-color: #f55e2c;
   -webkit-appearance: none;
   position: relative;
   display: inline-block;
-  color: #000000 !important;
   text-decoration: none;
   font-weight: 700;
   border: 0;
@@ -538,8 +532,7 @@ button,
 
 
   &:hover {
-    @include vendor('background-image', ('linear-gradient(top, #490a29, #171311)'));
-    color: #fff !important;
+    background-color: #f56b41;
   }
 
   &:active {
