--- a/css/main.scss
+++ b/css/main.scss
@@ -51,7 +51,7 @@ table {
 body {
   -webkit-text-size-adjust: none;
   line-height: 1;
-
+  background-color: #171311;
 }
 
 mark {
@@ -102,6 +102,7 @@ main {
 
 a {
   text-decoration: underline;
+  color: #fff;
 
   img {
     border: 0;
@@ -203,8 +204,6 @@ header {
 }
 
 footer {
-  background-color: #171311;
-
   > p {
     font-size: 1.25em;
   }
@@ -278,18 +277,6 @@ footer {
       image-rendering: pixelated;
     }
 
-  }
-}
-
-#promotion-row {
-  background-color: #171311;
-}
-
-#steps-row {
-  background-color: #490a29;
-
-  h2 {
-    margin-top: 2em;
   }
 }
 
@@ -667,23 +654,7 @@ ul.actions {
   padding: 3em 0 3em 0;
   text-align: center;
 
-  &.style1 {
-    background-image: none;
-    background-color: #fff;
-  }
-
-  &.style2 {
-    background-color: #fafafa;
-  }
-
-  &.style3 {
-    background-color: #f4f4f4;
-  }
-
   &.style4 {
-    background-color: #171311;
-    color: #dcdcdc;
-
     h1, h2, h3, h4, h5, h6 {
       color: #fff;
     }
