--- a/css/main.scss
+++ b/css/main.scss
@@ -589,7 +589,6 @@ ul.actions {
 /* Box */
 
 .box {
-  background: #fff;
   text-align: center;
   padding: 2em;
 
@@ -1404,4 +1403,8 @@ input[type=checkbox] {
 
 .horn {
   width: 5em;
+}
+
+#steps-row {
+  background-color: #9b9b9b;
 }
