--- a/css/main.css
+++ b/css/main.css
@@ -1594,5 +1594,11 @@ input[type=checkbox] {
 
 #steps-row {
   background-color: #9b9b9b; }
+  #steps-row .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; }
+  #steps-row img {
+    width: 20%; }
 
 /*# sourceMappingURL=main.css.map */
