--- a/css/main.css
+++ b/css/main.css
@@ -1594,10 +1594,17 @@ input[type=checkbox] {
 
 #steps-row {
   background-color: #9b9b9b; }
-  #steps-row .row {
+  #steps-row .my-flex-cont {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; }
+    flex-flow: row wrap;
+    justify-content: center; }
+  #steps-row .my-flex-box {
+    margin: 5px;
+    padding: 20px;
+    flex: 3 1 auto;
+    border: 2px seagreen solid;
+    flex-basis: calc(50% - 10px);
+    max-width: 200px; }
   #steps-row img {
     width: 20%; }
 
