--- a/css/main.scss
+++ b/css/main.scss
@@ -1408,11 +1408,21 @@ input[type=checkbox] {
 #steps-row {
   background-color: #9b9b9b;
 
-  .row {
+  .my-flex-cont {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-flow: row wrap;
+    justify-content: center;
   }
+
+  .my-flex-box {
+    margin: 5px;
+    padding: 20px;
+    flex: 3 1 auto;
+    border: 2px seagreen solid;
+    flex-basis: calc(50% - 10px);
+    max-width: 200px;
+  }
+
 
   img {
     width: 20%;
